syntax = "proto3";

option csharp_namespace = "CareerCloud.gRPC.Protos";

package SecurityLoginsLog;


import "Protos/Common.proto";

import "google/protobuf/timestamp.proto";

service SecurityLoginsLog{
    //create
     rpc CreateSecurityLoginsLog(SecurityLoginsLogEntity) returns(SecurityLoginsLogStatusMessage);

    //update
    rpc UpdateSecurityLoginsLog(SecurityLoginsLogEntity) returns(SecurityLoginsLogStatusMessage);

    //read
    rpc GetSecurityLoginsLog(IdRequestSecurityLoginsLog) returns(SecurityLoginsLogEntity);

    //delete
    rpc DeleteSecurityLoginsLog(IdRequestSecurityLoginsLog) returns(SecurityLoginsLogStatusMessage);

}

message IdRequestSecurityLoginsLog{
    string Id=1;
}


message SecurityLoginsLogEntity{

    string Id=1;
    string Login = 2;
    string SourceIP = 3;
    google.protobuf.Timestamp LogonDate= 4;
    bool IsSuccesful = 5;
}

message SecurityLoginsLogStatusMessage {
  Common.CommonResponse common_response = 10;
}